# proxy-wasm-http-call

./: Cargo.toml  Makefile  README.md  envoy.yaml
src/: lib.rs
