[package]
name = "proxy-wasm-http-call"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.20", features = ["std"] }
proxy-wasm = "0.2.1"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
