[package]
name = "proxy-wasm-http-call"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.20", features = ["std"] }
prost = "0.13.2"
proxy-wasm = "0.2.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
